--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "build": "rollup -c",
     "lint": "eslint .",
     "precommit": "eslint . --max-warnings 0 && pretty-quick --staged",
-    "test": "mocha --compilers js:@babel/register --reporter spec test/*.js && jest"
+    "test": "mocha --compilers js:@babel/register --reporter spec test/*.js && jest",
+    "jest": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
